--- a/codes/1_simple_time_series.ipynb
+++ b/codes/1_simple_time_series.ipynb
@@ -34,6 +34,7 @@
     "CONFIGS = {\n",
     "    'data_path': '../data/',\n",
     "    'model_path': '../model/',\n",
+    "    'model_name': 'super_basic',\n",
     "    \n",
     "    'test_lenght': 24,\n",
     "    'valid_start_index': 1992,\n",
@@ -42,6 +43,7 @@
     "    'batch_size': 64,\n",
     "    'learning_rate': 1e-4,\n",
     "    'epochs': 100,\n",
+    "    'es_patience': 10,\n",
     "    \n",
     "    'window_size': 7*24,\n",
     "    'target_length': 3,\n",
@@ -167,11 +169,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def set_model(CONFIGS, model_name='model', print_summary=False):\n",
+    "def set_model(CONFIGS, model_name = None, print_summary=False):\n",
     "    inputs = Input(batch_shape=(None, CONFIGS['window_size']), name='inputs')\n",
     "    dense_0 = Dense(64, activation='relu', name='dense_0')(inputs)\n",
     "    dense_1 = Dense(32, activation='relu', name='dense_1')(dense_0)\n",
     "    outputs = Dense(CONFIGS['target_length'], name='outputs')(dense_1)\n",
+    "    \n",
+    "    if not model_name:\n",
+    "        model_name = CONFIGS['model_name']\n",
     "    \n",
     "    model = Model(\n",
     "        inputs, outputs,\n",
@@ -222,10 +227,7 @@
     }
    ],
    "source": [
-    "model_name = 'super_basic'\n",
-    "CONFIGS['model_name'] = model_name\n",
-    "\n",
-    "model = set_model(CONFIGS, model_name=model_name, print_summary=True)"
+    "model = set_model(CONFIGS, print_summary=True)"
    ]
   },
   {
@@ -241,7 +243,7 @@
     "    X_valid, y_valid = valid[CONFIGS['input_cols']], valid[CONFIGS['target_cols']]\n",
     "    \n",
     "    early_stop = EarlyStopping(\n",
-    "        patience=10\n",
+    "        patience=CONFIGS['es_patience']\n",
     "    )\n",
     "    save_best_only = ModelCheckpoint(\n",
     "        filepath = f'{CONFIGS[\"model_path\"]}{CONFIGS[\"model_name\"]}.h5',\n",
@@ -277,119 +279,35 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/100\n",
-      "29/29 [==============================] - 1s 4ms/step - loss: 2392141.7500 - val_loss: 216664.7031\n",
+      "29/29 [==============================] - 3s 5ms/step - loss: 84881208.0000 - val_loss: 29211922.0000\n",
       "Epoch 2/100\n",
-      "29/29 [==============================] - 0s 2ms/step - loss: 60439.7734 - val_loss: 19564.6094\n",
+      "29/29 [==============================] - 0s 2ms/step - loss: 16126583.0000 - val_loss: 7578429.0000\n",
       "Epoch 3/100\n",
-      "29/29 [==============================] - 0s 2ms/step - loss: 15164.8154 - val_loss: 22807.6836\n",
+      "29/29 [==============================] - 0s 2ms/step - loss: 4033865.2500 - val_loss: 1354684.3750\n",
       "Epoch 4/100\n",
-      "29/29 [==============================] - 0s 2ms/step - loss: 12590.3711 - val_loss: 19685.1953\n",
+      "29/29 [==============================] - 0s 2ms/step - loss: 603886.8750 - val_loss: 98344.5234\n",
       "Epoch 5/100\n",
-      "29/29 [==============================] - 0s 2ms/step - loss: 12461.7422 - val_loss: 19341.0645\n",
+      "29/29 [==============================] - 0s 2ms/step - loss: 39814.6562 - val_loss: 10269.6055\n",
       "Epoch 6/100\n",
-      "29/29 [==============================] - 0s 2ms/step - loss: 12318.7998 - val_loss: 20145.3770\n",
+      "29/29 [==============================] - 0s 2ms/step - loss: 6481.4575 - val_loss: 13534.6602\n",
       "Epoch 7/100\n",
-      "29/29 [==============================] - 0s 2ms/step - loss: 12138.7012 - val_loss: 20628.7832\n",
+      "29/29 [==============================] - 0s 2ms/step - loss: 6278.4688 - val_loss: 12843.4756\n",
       "Epoch 8/100\n",
-      "29/29 [==============================] - 0s 2ms/step - loss: 12098.7842 - val_loss: 19611.3340\n",
+      "29/29 [==============================] - 0s 2ms/step - loss: 6230.3589 - val_loss: 12979.8477\n",
       "Epoch 9/100\n",
-      "29/29 [==============================] - 0s 2ms/step - loss: 12068.0430 - val_loss: 19737.1738\n",
+      "29/29 [==============================] - 0s 2ms/step - loss: 6216.0757 - val_loss: 12751.9531\n",
       "Epoch 10/100\n",
-      "29/29 [==============================] - 0s 2ms/step - loss: 12043.0703 - val_loss: 18937.1855\n",
+      "29/29 [==============================] - 0s 2ms/step - loss: 6209.7104 - val_loss: 12306.9180\n",
       "Epoch 11/100\n",
-      "29/29 [==============================] - 0s 2ms/step - loss: 12033.4521 - val_loss: 18948.2012\n",
+      "29/29 [==============================] - 0s 2ms/step - loss: 6186.7080 - val_loss: 12198.8027\n",
       "Epoch 12/100\n",
-      "29/29 [==============================] - 0s 2ms/step - loss: 12087.2100 - val_loss: 19700.0977\n",
+      "29/29 [==============================] - 0s 2ms/step - loss: 6173.6973 - val_loss: 12214.4004\n",
       "Epoch 13/100\n",
-      "29/29 [==============================] - 0s 2ms/step - loss: 11975.7998 - val_loss: 22468.2559\n",
+      "29/29 [==============================] - 0s 2ms/step - loss: 6176.8364 - val_loss: 12261.8740\n",
       "Epoch 14/100\n",
-      "29/29 [==============================] - 0s 2ms/step - loss: 12002.4814 - val_loss: 18620.2012\n",
+      "29/29 [==============================] - 0s 2ms/step - loss: 6163.4912 - val_loss: 12911.2256\n",
       "Epoch 15/100\n",
-      "29/29 [==============================] - 0s 2ms/step - loss: 12123.0859 - val_loss: 18913.2246\n",
-      "Epoch 16/100\n",
-      "29/29 [==============================] - 0s 2ms/step - loss: 12136.8301 - val_loss: 22706.4238\n",
-      "Epoch 17/100\n",
-      "29/29 [==============================] - 0s 2ms/step - loss: 11921.8779 - val_loss: 18909.0391\n",
-      "Epoch 18/100\n",
-      "29/29 [==============================] - 0s 2ms/step - loss: 11850.1494 - val_loss: 19749.8457\n",
-      "Epoch 19/100\n",
-      "29/29 [==============================] - 0s 2ms/step - loss: 11889.7881 - val_loss: 21474.2207\n",
-      "Epoch 20/100\n",
-      "29/29 [==============================] - 0s 2ms/step - loss: 11856.8291 - val_loss: 20895.3242\n",
-      "Epoch 21/100\n",
-      "29/29 [==============================] - 0s 2ms/step - loss: 11797.4785 - val_loss: 19482.4824\n",
-      "Epoch 22/100\n",
-      "29/29 [==============================] - 0s 2ms/step - loss: 12298.4092 - val_loss: 20027.3945\n",
-      "Epoch 23/100\n",
-      "29/29 [==============================] - 0s 2ms/step - loss: 11925.3633 - val_loss: 20880.8398\n",
-      "Epoch 24/100\n",
-      "29/29 [==============================] - 0s 2ms/step - loss: 11701.0684 - val_loss: 18226.5332\n",
-      "Epoch 25/100\n",
-      "29/29 [==============================] - 0s 2ms/step - loss: 11704.7588 - val_loss: 17228.5762\n",
-      "Epoch 26/100\n",
-      "29/29 [==============================] - 0s 2ms/step - loss: 11922.3398 - val_loss: 22803.8691\n",
-      "Epoch 27/100\n",
-      "29/29 [==============================] - 0s 2ms/step - loss: 11716.8916 - val_loss: 17324.9707\n",
-      "Epoch 28/100\n",
-      "29/29 [==============================] - 0s 2ms/step - loss: 11883.2764 - val_loss: 17634.8613\n",
-      "Epoch 29/100\n",
-      "29/29 [==============================] - 0s 2ms/step - loss: 11670.7637 - val_loss: 23721.7344\n",
-      "Epoch 30/100\n",
-      "29/29 [==============================] - 0s 2ms/step - loss: 11737.0889 - val_loss: 24015.9297\n",
-      "Epoch 31/100\n",
-      "29/29 [==============================] - 0s 2ms/step - loss: 11542.6963 - val_loss: 16176.1279\n",
-      "Epoch 32/100\n",
-      "29/29 [==============================] - 0s 2ms/step - loss: 11580.1152 - val_loss: 18759.0254\n",
-      "Epoch 33/100\n",
-      "29/29 [==============================] - 0s 2ms/step - loss: 11431.3174 - val_loss: 17125.3105\n",
-      "Epoch 34/100\n",
-      "29/29 [==============================] - 0s 2ms/step - loss: 11458.4639 - val_loss: 20991.2480\n",
-      "Epoch 35/100\n",
-      "29/29 [==============================] - 0s 2ms/step - loss: 11401.8457 - val_loss: 17864.9727\n",
-      "Epoch 36/100\n",
-      "29/29 [==============================] - 0s 2ms/step - loss: 11424.7246 - val_loss: 22279.5391\n",
-      "Epoch 37/100\n",
-      "29/29 [==============================] - 0s 2ms/step - loss: 11482.0762 - val_loss: 19139.6270\n",
-      "Epoch 38/100\n",
-      "29/29 [==============================] - 0s 2ms/step - loss: 11192.7148 - val_loss: 21335.9180\n",
-      "Epoch 39/100\n",
-      "29/29 [==============================] - 0s 2ms/step - loss: 11384.8662 - val_loss: 15356.5664\n",
-      "Epoch 40/100\n",
-      "29/29 [==============================] - 0s 2ms/step - loss: 11336.6621 - val_loss: 20516.9238\n",
-      "Epoch 41/100\n",
-      "29/29 [==============================] - 0s 2ms/step - loss: 11125.0957 - val_loss: 18774.7129\n",
-      "Epoch 42/100\n",
-      "29/29 [==============================] - 0s 2ms/step - loss: 11206.0889 - val_loss: 16843.3281\n",
-      "Epoch 43/100\n",
-      "29/29 [==============================] - 0s 2ms/step - loss: 11008.5752 - val_loss: 15091.5742\n",
-      "Epoch 44/100\n",
-      "29/29 [==============================] - 0s 2ms/step - loss: 11079.8467 - val_loss: 16396.0293\n",
-      "Epoch 45/100\n",
-      "29/29 [==============================] - 0s 2ms/step - loss: 10958.6113 - val_loss: 22588.6758\n",
-      "Epoch 46/100\n",
-      "29/29 [==============================] - 0s 2ms/step - loss: 11157.9434 - val_loss: 18352.0508\n",
-      "Epoch 47/100\n",
-      "29/29 [==============================] - 0s 2ms/step - loss: 11309.4219 - val_loss: 14910.4941\n",
-      "Epoch 48/100\n",
-      "29/29 [==============================] - 0s 2ms/step - loss: 11070.4961 - val_loss: 16201.5186\n",
-      "Epoch 49/100\n",
-      "29/29 [==============================] - 0s 2ms/step - loss: 10873.5498 - val_loss: 16925.7207\n",
-      "Epoch 50/100\n",
-      "29/29 [==============================] - 0s 2ms/step - loss: 11086.9824 - val_loss: 18697.6387\n",
-      "Epoch 51/100\n",
-      "29/29 [==============================] - 0s 2ms/step - loss: 10760.3809 - val_loss: 20072.8027\n",
-      "Epoch 52/100\n",
-      "29/29 [==============================] - 0s 2ms/step - loss: 10766.7275 - val_loss: 16781.3574\n",
-      "Epoch 53/100\n",
-      "29/29 [==============================] - 0s 2ms/step - loss: 10773.7891 - val_loss: 23088.5176\n",
-      "Epoch 54/100\n",
-      "29/29 [==============================] - 0s 2ms/step - loss: 11003.2666 - val_loss: 17731.4707\n",
-      "Epoch 55/100\n",
-      "29/29 [==============================] - 0s 2ms/step - loss: 10502.2617 - val_loss: 17678.4590\n",
-      "Epoch 56/100\n",
-      "29/29 [==============================] - 0s 2ms/step - loss: 10841.9365 - val_loss: 21928.4258\n",
-      "Epoch 57/100\n",
-      "29/29 [==============================] - 0s 2ms/step - loss: 11132.5322 - val_loss: 18367.8203\n"
+      "29/29 [==============================] - 0s 2ms/step - loss: 6145.9487 - val_loss: 12680.8994\n"
      ]
     }
    ],
@@ -434,9 +352,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "train_loss: 11173.70703125\n",
-      "valid_loss: 14910.494140625\n",
-      "test_loss: 21849.96875\n"
+      "train_loss: 7653.4296875\n",
+      "valid_loss: 10269.60546875\n",
+      "test_loss: 14098.6875\n"
      ]
     }
    ],
@@ -455,7 +373,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "139bbaf6",
+   "id": "888fe60b",
    "metadata": {},
    "outputs": [],
    "source": []
