--- a/codes/2_tf_dataset.ipynb
+++ b/codes/2_tf_dataset.ipynb
@@ -100,7 +100,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "e239b5a3",
+   "id": "c2c40b63",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,6 +119,34 @@
   {
    "cell_type": "code",
    "execution_count": 7,
+   "id": "e239b5a3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def mk_dataset(data, shuffle=False):\n",
+    "    \n",
+    "    X = data[:-CONFIGS['target_length']]\n",
+    "    y = data[CONFIGS['window_size']:]\n",
+    "    \n",
+    "    X_ds = Dataset.from_tensor_slices(X)\n",
+    "    X_ds = X_ds.window(CONFIGS['window_size'], shift=1, drop_remainder=True)\n",
+    "    X_ds = X_ds.flat_map(lambda x: x).batch(CONFIGS['window_size'])\n",
+    "    \n",
+    "    y_ds = Dataset.from_tensor_slices(y)\n",
+    "    y_ds = y_ds.window(CONFIGS['target_length'], shift=1, drop_remainder=True)\n",
+    "    y_ds = y_ds.flat_map(lambda x: x).batch(CONFIGS['target_length'])\n",
+    "    \n",
+    "    ds = Dataset.zip((X_ds, y_ds))\n",
+    "    if shuffle:\n",
+    "        ds = ds.shuffle(512)\n",
+    "    ds = ds.batch(CONFIGS['batch_size']).cache().prefetch(2)\n",
+    "    \n",
+    "    return ds"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "id": "832d0773",
    "metadata": {},
    "outputs": [],
@@ -130,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "061bdf14",
    "metadata": {},
    "outputs": [],
@@ -163,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "5f7f330d",
    "metadata": {},
    "outputs": [
@@ -196,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "a89ab345",
    "metadata": {},
    "outputs": [],
@@ -229,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "456b660b",
    "metadata": {},
    "outputs": [
@@ -238,33 +266,31 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/100\n",
-      "29/29 [==============================] - 1s 7ms/step - loss: 39216632.0000 - val_loss: 9952302.0000\n",
+      "29/29 [==============================] - 1s 6ms/step - loss: 25702896.0000 - val_loss: 3053784.2500\n",
       "Epoch 2/100\n",
-      "29/29 [==============================] - 0s 2ms/step - loss: 4171096.5000 - val_loss: 698378.9375\n",
+      "29/29 [==============================] - 0s 2ms/step - loss: 652600.1875 - val_loss: 159718.4531\n",
       "Epoch 3/100\n",
-      "29/29 [==============================] - 0s 2ms/step - loss: 279479.6562 - val_loss: 25856.8867\n",
+      "29/29 [==============================] - 0s 2ms/step - loss: 46150.2578 - val_loss: 11819.3604\n",
       "Epoch 4/100\n",
-      "29/29 [==============================] - 0s 2ms/step - loss: 17563.3965 - val_loss: 15005.7979\n",
+      "29/29 [==============================] - 0s 2ms/step - loss: 9755.6777 - val_loss: 14450.7373\n",
       "Epoch 5/100\n",
-      "29/29 [==============================] - 0s 2ms/step - loss: 7543.8452 - val_loss: 17559.1562\n",
+      "29/29 [==============================] - 0s 2ms/step - loss: 9133.9746 - val_loss: 15494.8896\n",
       "Epoch 6/100\n",
-      "29/29 [==============================] - 0s 2ms/step - loss: 7314.7109 - val_loss: 16008.2998\n",
+      "29/29 [==============================] - 0s 2ms/step - loss: 9111.5303 - val_loss: 14906.9512\n",
       "Epoch 7/100\n",
-      "29/29 [==============================] - 0s 2ms/step - loss: 7114.8501 - val_loss: 15395.7910\n",
+      "29/29 [==============================] - 0s 2ms/step - loss: 9102.0488 - val_loss: 15074.6934\n",
       "Epoch 8/100\n",
-      "29/29 [==============================] - 0s 2ms/step - loss: 7017.8374 - val_loss: 15369.9131\n",
+      "29/29 [==============================] - 0s 2ms/step - loss: 9102.6748 - val_loss: 15111.5801\n",
       "Epoch 9/100\n",
-      "29/29 [==============================] - 0s 2ms/step - loss: 6954.6685 - val_loss: 15343.7471\n",
+      "29/29 [==============================] - 0s 2ms/step - loss: 9102.7686 - val_loss: 15168.0322\n",
       "Epoch 10/100\n",
-      "29/29 [==============================] - 0s 2ms/step - loss: 6894.8140 - val_loss: 15245.6504\n",
+      "29/29 [==============================] - 0s 2ms/step - loss: 9102.8828 - val_loss: 15219.9297\n",
       "Epoch 11/100\n",
-      "29/29 [==============================] - 0s 2ms/step - loss: 6827.6357 - val_loss: 15155.2012\n",
+      "29/29 [==============================] - 0s 2ms/step - loss: 9102.9189 - val_loss: 15269.2500\n",
       "Epoch 12/100\n",
-      "29/29 [==============================] - 0s 2ms/step - loss: 6761.8262 - val_loss: 15058.0107\n",
+      "29/29 [==============================] - 0s 2ms/step - loss: 9102.7959 - val_loss: 15309.4404\n",
       "Epoch 13/100\n",
-      "29/29 [==============================] - 0s 2ms/step - loss: 6716.1689 - val_loss: 15093.3916\n",
-      "Epoch 14/100\n",
-      "29/29 [==============================] - 0s 2ms/step - loss: 6687.1245 - val_loss: 15154.9834\n"
+      "29/29 [==============================] - 0s 2ms/step - loss: 9102.4150 - val_loss: 15338.2441\n"
      ]
     }
    ],
@@ -274,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "e3affb87",
    "metadata": {},
    "outputs": [],
@@ -285,30 +311,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "60fa261a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def mk_y_true(data):\n",
-    "    data = data[CONFIGS['window_size']:]\n",
-    "    ds = Dataset.from_tensor_slices(data)\n",
-    "    ds = ds.window(CONFIGS['target_length'], shift=1, drop_remainder=True)\n",
-    "    ds = ds.flat_map(lambda x: x).batch(CONFIGS['target_length'])\n",
-    "    return np.array(list(ds.as_numpy_iterator()))"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 14,
    "id": "d0d41640",
    "metadata": {},
    "outputs": [],
    "source": [
-    "y_train = mk_y_true(train)\n",
-    "y_valid = mk_y_true(valid)\n",
-    "y_test = mk_y_true(test)\n",
-    "\n",
     "y_train_pred = best_model.predict(train_ds)\n",
     "y_valid_pred = best_model.predict(valid_ds)\n",
     "y_test_pred = best_model.predict(test_ds)"
@@ -324,18 +331,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "train_loss: 11478.693359375\n",
-      "valid_loss: 15005.7978515625\n",
-      "test_loss: 13216.8125\n"
+      "train_loss: 10389.0869140625\n",
+      "valid_loss: 11819.3603515625\n",
+      "test_loss: 10346.9599609375\n"
      ]
     }
    ],
    "source": [
     "mse = MeanSquaredError()\n",
     "\n",
-    "train_loss = mse(y_train, y_train_pred).numpy()\n",
-    "valid_loss = mse(y_valid, y_valid_pred).numpy()\n",
-    "test_loss = mse(y_test, y_test_pred).numpy()\n",
+    "train_loss = best_model.evaluate(train_ds, verbose=0)\n",
+    "valid_loss = best_model.evaluate(valid_ds, verbose=0)\n",
+    "test_loss = best_model.evaluate(test_ds, verbose=0)\n",
     "\n",
     "print(f'train_loss: {train_loss}')\n",
     "print(f'valid_loss: {valid_loss}')\n",
@@ -345,7 +352,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6a10c2f7",
+   "id": "507a825b",
    "metadata": {},
    "outputs": [],
    "source": []
