--- a/codes/1_super_basic.ipynb
+++ b/codes/1_super_basic.ipynb
@@ -165,6 +165,16 @@
   {
    "cell_type": "code",
    "execution_count": 9,
+   "id": "08f06295",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mse = MeanSquaredError()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "id": "b4d01667",
    "metadata": {},
    "outputs": [],
@@ -185,7 +195,7 @@
     "    \n",
     "    optimizer = Adam(learning_rate=CONFIGS['learning_rate'])\n",
     "    model.compile(\n",
-    "        loss = 'mse',\n",
+    "        loss = mse,\n",
     "        optimizer = optimizer,\n",
     "    )\n",
     "    \n",
@@ -197,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "a446abff",
    "metadata": {
     "scrolled": true
@@ -232,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "f120102c",
    "metadata": {},
    "outputs": [],
@@ -268,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "8179dd95",
    "metadata": {
     "scrolled": true
@@ -279,35 +289,35 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/100\n",
-      "29/29 [==============================] - 3s 5ms/step - loss: 84881208.0000 - val_loss: 29211922.0000\n",
+      "29/29 [==============================] - 1s 5ms/step - loss: 73326104.0000 - val_loss: 29656152.0000\n",
       "Epoch 2/100\n",
-      "29/29 [==============================] - 0s 2ms/step - loss: 16126583.0000 - val_loss: 7578429.0000\n",
+      "29/29 [==============================] - 0s 2ms/step - loss: 14798467.0000 - val_loss: 4228784.0000\n",
       "Epoch 3/100\n",
-      "29/29 [==============================] - 0s 2ms/step - loss: 4033865.2500 - val_loss: 1354684.3750\n",
+      "29/29 [==============================] - 0s 2ms/step - loss: 1994319.7500 - val_loss: 488892.9062\n",
       "Epoch 4/100\n",
-      "29/29 [==============================] - 0s 2ms/step - loss: 603886.8750 - val_loss: 98344.5234\n",
+      "29/29 [==============================] - 0s 2ms/step - loss: 196021.2500 - val_loss: 29830.4297\n",
       "Epoch 5/100\n",
-      "29/29 [==============================] - 0s 2ms/step - loss: 39814.6562 - val_loss: 10269.6055\n",
+      "29/29 [==============================] - 0s 2ms/step - loss: 17347.6445 - val_loss: 10966.3320\n",
       "Epoch 6/100\n",
-      "29/29 [==============================] - 0s 2ms/step - loss: 6481.4575 - val_loss: 13534.6602\n",
+      "29/29 [==============================] - 0s 2ms/step - loss: 8371.7090 - val_loss: 15605.4854\n",
       "Epoch 7/100\n",
-      "29/29 [==============================] - 0s 2ms/step - loss: 6278.4688 - val_loss: 12843.4756\n",
+      "29/29 [==============================] - 0s 2ms/step - loss: 7508.0249 - val_loss: 16568.9609\n",
       "Epoch 8/100\n",
-      "29/29 [==============================] - 0s 2ms/step - loss: 6230.3589 - val_loss: 12979.8477\n",
+      "29/29 [==============================] - 0s 2ms/step - loss: 7443.3921 - val_loss: 16937.6895\n",
       "Epoch 9/100\n",
-      "29/29 [==============================] - 0s 2ms/step - loss: 6216.0757 - val_loss: 12751.9531\n",
+      "29/29 [==============================] - 0s 2ms/step - loss: 7440.6514 - val_loss: 16730.9688\n",
       "Epoch 10/100\n",
-      "29/29 [==============================] - 0s 2ms/step - loss: 6209.7104 - val_loss: 12306.9180\n",
+      "29/29 [==============================] - 0s 2ms/step - loss: 7454.7314 - val_loss: 16449.9824\n",
       "Epoch 11/100\n",
-      "29/29 [==============================] - 0s 2ms/step - loss: 6186.7080 - val_loss: 12198.8027\n",
+      "29/29 [==============================] - 0s 2ms/step - loss: 7445.5513 - val_loss: 17131.4043\n",
       "Epoch 12/100\n",
-      "29/29 [==============================] - 0s 2ms/step - loss: 6173.6973 - val_loss: 12214.4004\n",
+      "29/29 [==============================] - 0s 2ms/step - loss: 7446.9028 - val_loss: 16464.5801\n",
       "Epoch 13/100\n",
-      "29/29 [==============================] - 0s 2ms/step - loss: 6176.8364 - val_loss: 12261.8740\n",
+      "29/29 [==============================] - 0s 2ms/step - loss: 7443.0356 - val_loss: 17236.3359\n",
       "Epoch 14/100\n",
-      "29/29 [==============================] - 0s 2ms/step - loss: 6163.4912 - val_loss: 12911.2256\n",
+      "29/29 [==============================] - 0s 2ms/step - loss: 7442.4678 - val_loss: 17346.7363\n",
       "Epoch 15/100\n",
-      "29/29 [==============================] - 0s 2ms/step - loss: 6145.9487 - val_loss: 12680.8994\n"
+      "29/29 [==============================] - 0s 2ms/step - loss: 7443.0957 - val_loss: 17025.2051\n"
      ]
     }
    ],
@@ -317,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "bec53ea7",
    "metadata": {},
    "outputs": [],
@@ -328,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "e87104d7",
    "metadata": {},
    "outputs": [],
@@ -344,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "2e94d02c",
    "metadata": {},
    "outputs": [
@@ -352,15 +362,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "train_loss: 7653.4296875\n",
-      "valid_loss: 10269.60546875\n",
-      "test_loss: 14098.6875\n"
+      "train_loss: 9796.9130859375\n",
+      "valid_loss: 10966.33203125\n",
+      "test_loss: 14396.3349609375\n"
      ]
     }
    ],
    "source": [
-    "mse = MeanSquaredError()\n",
-    "\n",
     "train_loss = mse(y_train, y_train_pred).numpy()\n",
     "valid_loss = mse(y_valid, y_valid_pred).numpy()\n",
     "test_loss = mse(y_test, y_test_pred).numpy()\n",
