--- a/codes/2_tf_dataset.ipynb
+++ b/codes/2_tf_dataset.ipynb
@@ -179,7 +179,7 @@
     "    \n",
     "    optimizer = Adam(learning_rate=CONFIGS['learning_rate'])\n",
     "    model.compile(\n",
-    "        loss = 'mse',\n",
+    "        loss = MeanSquaredError(),\n",
     "        optimizer = optimizer,\n",
     "    )\n",
     "    \n",
@@ -266,31 +266,39 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/100\n",
-      "29/29 [==============================] - 1s 6ms/step - loss: 25702896.0000 - val_loss: 3053784.2500\n",
+      "29/29 [==============================] - 1s 6ms/step - loss: 109988384.0000 - val_loss: 51600060.0000\n",
       "Epoch 2/100\n",
-      "29/29 [==============================] - 0s 2ms/step - loss: 652600.1875 - val_loss: 159718.4531\n",
+      "29/29 [==============================] - 0s 2ms/step - loss: 33828000.0000 - val_loss: 19697826.0000\n",
       "Epoch 3/100\n",
-      "29/29 [==============================] - 0s 2ms/step - loss: 46150.2578 - val_loss: 11819.3604\n",
+      "29/29 [==============================] - 0s 2ms/step - loss: 12893697.0000 - val_loss: 6490151.5000\n",
       "Epoch 4/100\n",
-      "29/29 [==============================] - 0s 2ms/step - loss: 9755.6777 - val_loss: 14450.7373\n",
+      "29/29 [==============================] - 0s 2ms/step - loss: 3990121.5000 - val_loss: 1578040.7500\n",
       "Epoch 5/100\n",
-      "29/29 [==============================] - 0s 2ms/step - loss: 9133.9746 - val_loss: 15494.8896\n",
+      "29/29 [==============================] - 0s 2ms/step - loss: 929164.1250 - val_loss: 229533.7812\n",
       "Epoch 6/100\n",
-      "29/29 [==============================] - 0s 2ms/step - loss: 9111.5303 - val_loss: 14906.9512\n",
+      "29/29 [==============================] - 0s 2ms/step - loss: 148754.9531 - val_loss: 12425.9482\n",
       "Epoch 7/100\n",
-      "29/29 [==============================] - 0s 2ms/step - loss: 9102.0488 - val_loss: 15074.6934\n",
+      "29/29 [==============================] - 0s 2ms/step - loss: 19455.6270 - val_loss: 6690.4688\n",
       "Epoch 8/100\n",
-      "29/29 [==============================] - 0s 2ms/step - loss: 9102.6748 - val_loss: 15111.5801\n",
+      "29/29 [==============================] - 0s 2ms/step - loss: 6950.0586 - val_loss: 11545.1279\n",
       "Epoch 9/100\n",
-      "29/29 [==============================] - 0s 2ms/step - loss: 9102.7686 - val_loss: 15168.0322\n",
+      "29/29 [==============================] - 0s 2ms/step - loss: 6112.1475 - val_loss: 11010.6064\n",
       "Epoch 10/100\n",
-      "29/29 [==============================] - 0s 2ms/step - loss: 9102.8828 - val_loss: 15219.9297\n",
+      "29/29 [==============================] - 0s 2ms/step - loss: 5768.0122 - val_loss: 9602.6592\n",
       "Epoch 11/100\n",
-      "29/29 [==============================] - 0s 2ms/step - loss: 9102.9189 - val_loss: 15269.2500\n",
+      "29/29 [==============================] - 0s 2ms/step - loss: 5504.0273 - val_loss: 9062.5859\n",
       "Epoch 12/100\n",
-      "29/29 [==============================] - 0s 2ms/step - loss: 9102.7959 - val_loss: 15309.4404\n",
+      "29/29 [==============================] - 0s 2ms/step - loss: 5327.3496 - val_loss: 9076.3984\n",
       "Epoch 13/100\n",
-      "29/29 [==============================] - 0s 2ms/step - loss: 9102.4150 - val_loss: 15338.2441\n"
+      "29/29 [==============================] - 0s 2ms/step - loss: 5218.1821 - val_loss: 8993.1377\n",
+      "Epoch 14/100\n",
+      "29/29 [==============================] - 0s 2ms/step - loss: 5143.8623 - val_loss: 8975.2549\n",
+      "Epoch 15/100\n",
+      "29/29 [==============================] - 0s 2ms/step - loss: 5092.8081 - val_loss: 8890.0098\n",
+      "Epoch 16/100\n",
+      "29/29 [==============================] - 0s 2ms/step - loss: 5051.8838 - val_loss: 8866.1846\n",
+      "Epoch 17/100\n",
+      "29/29 [==============================] - 0s 2ms/step - loss: 5018.8052 - val_loss: 8838.4463\n"
      ]
     }
    ],
@@ -331,15 +339,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "train_loss: 10389.0869140625\n",
-      "valid_loss: 11819.3603515625\n",
-      "test_loss: 10346.9599609375\n"
+      "train_loss: 8556.400390625\n",
+      "valid_loss: 6690.46875\n",
+      "test_loss: 10272.447265625\n"
      ]
     }
    ],
    "source": [
-    "mse = MeanSquaredError()\n",
-    "\n",
     "train_loss = best_model.evaluate(train_ds, verbose=0)\n",
     "valid_loss = best_model.evaluate(valid_ds, verbose=0)\n",
     "test_loss = best_model.evaluate(test_ds, verbose=0)\n",
@@ -352,7 +358,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "507a825b",
+   "id": "26476f5e",
    "metadata": {},
    "outputs": [],
    "source": []
