Add cnn and bilstm

--- a/codes/3_multi_input.ipynb
+++ b/codes/3_multi_input.ipynb
@@ -33,6 +33,7 @@
     "    'data_path': '../data/',\n",
     "    'model_path': '../model/',\n",
     "    'model_name': 'multi_input',\n",
+    "    'model_type': 'cnn',\n",
     "    \n",
     "    'test_lenght': 24,\n",
     "    'valid_start_index': 1992,\n",
@@ -89,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 5,
    "id": "821c736c",
    "metadata": {},
    "outputs": [],
@@ -123,59 +124,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
+   "id": "27306c19",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "new_data = mk_time_data(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "id": "72b5289a",
    "metadata": {},
    "outputs": [],
    "source": [
+    "### target_date 정보도 쓰자\n",
+    "\n",
     "input_cols = [\n",
     "    'temp', 'wind', 'humid', 'rain', 'sun', 'non_elec_eq',\n",
     "    'sunlight_eq', 'time_stamp', 'cos_hour', 'sin_hour',\n",
     "    'cos_weekday', 'sin_weekday', 'is_holiday', 'target',\n",
     "]\n",
+    "target_cols = ['target']\n",
     "\n",
-    "target_cols = ['target']"
+    "CONFIGS['input_cols'] = input_cols\n",
+    "CONFIGS['target_cols'] = target_cols"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "e2efdfef",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f56be5a1",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "id": "53c18573",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "train = data.loc[:CONFIGS['valid_start_index'], :]\n",
-    "valid = data.loc[CONFIGS['valid_start_index']-CONFIGS['window_size']:CONFIGS['test_start_index'], :]\n",
-    "test = data.loc[CONFIGS['test_start_index']-CONFIGS['window_size']:, :]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "e239b5a3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def mk_dataset(data, shuffle=False):\n",
+    "def mk_dataset(data, CONFIGS, shuffle=False):\n",
     "    \n",
-    "    X = data[:-CONFIGS['target_length']]\n",
-    "    y = data[CONFIGS['window_size']:]\n",
+    "    X = data[CONFIGS['input_cols']][:-CONFIGS['target_length']]\n",
+    "    y = data[CONFIGS['target_cols']][CONFIGS['window_size']:]\n",
     "    \n",
     "    X_ds = Dataset.from_tensor_slices(X)\n",
     "    X_ds = X_ds.window(CONFIGS['window_size'], shift=1, drop_remainder=True)\n",
@@ -195,26 +182,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "832d0773",
+   "execution_count": 9,
+   "id": "53c18573",
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_ds = mk_dataset(train, shuffle=True)\n",
-    "valid_ds = mk_dataset(valid)\n",
-    "test_ds = mk_dataset(test)"
+    "train = new_data.loc[:CONFIGS['valid_start_index'], :]\n",
+    "valid = new_data.loc[CONFIGS['valid_start_index']-CONFIGS['window_size']:CONFIGS['test_start_index'], :]\n",
+    "test = new_data.loc[CONFIGS['test_start_index']-CONFIGS['window_size']:, :]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
+   "id": "832d0773",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_ds = mk_dataset(train, CONFIGS, shuffle=True)\n",
+    "valid_ds = mk_dataset(valid, CONFIGS)\n",
+    "test_ds = mk_dataset(test, CONFIGS)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "id": "061bdf14",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def set_model(CONFIGS, model_name = None, print_summary=False):\n",
-    "    inputs = Input(batch_shape=(None, CONFIGS['window_size']), name='inputs')\n",
-    "    dense_0 = Dense(64, activation='relu', name='dense_0')(inputs)\n",
+    "# flatten, cnn, lstm, attention 추가\n",
+    "# 모델 class 형태로 변형\n",
+    "\n",
+    "def set_model(CONFIGS, model_name=None, print_summary=False):\n",
+    "    \n",
+    "    inputs = Input(batch_shape=(\n",
+    "        None, CONFIGS['window_size'], len(CONFIGS['input_cols'])\n",
+    "    ), name='inputs')\n",
+    "    \n",
+    "    if CONFIGS['model_type'] == 'flatten':\n",
+    "        flatten = Flatten(name='flatten')(inputs)\n",
+    "    elif CONFIGS['model_type'] == 'cnn':\n",
+    "        reshape = Reshape(target_shape=(\n",
+    "            CONFIGS['window_size'], len(CONFIGS['input_cols']), 1\n",
+    "        ), name='reshape')(inputs)\n",
+    "        conv_0 = Conv2D(8, (3, 1), strides=(2, 1), activation='relu', name='conv_0')(reshape)\n",
+    "        pool_0 = MaxPool2D((2, 1), name='pool_0')(conv_0)\n",
+    "        conv_1 = Conv2D(16, (3, 1), strides=(2, 1), activation='relu', name='conv_1')(pool_0)\n",
+    "        pool_1 = MaxPool2D((2, 1), name='pool_1')(conv_1)\n",
+    "        flatten = Flatten(name='flatten')(pool_1)\n",
+    "    elif CONFIGS['model_type'] == 'bilstm':\n",
+    "        bilstm_0 = Bidirectional(LSTM(\n",
+    "            16, return_sequences=True, recurrent_dropout=0.3, activation='relu'\n",
+    "        ), name='bilstm_0')(inputs)\n",
+    "        bilstm_1 = Bidirectional(LSTM(\n",
+    "            32, recurrent_dropout=0.3, activation='relu'\n",
+    "        ), name='bilstm_1')(bilstm_0)\n",
+    "        flatten = Flatten(name='flatten')(bilstm_1)\n",
+    "#     elif CONFIGS['model_type'] == 'attention':\n",
+    "        \n",
+    "    dense_0 = Dense(64, activation='relu', name='dense_0')(flatten)\n",
     "    dense_1 = Dense(32, activation='relu', name='dense_1')(dense_0)\n",
     "    outputs = Dense(CONFIGS['target_length'], name='outputs')(dense_1)\n",
     "    \n",
@@ -240,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "id": "5f7f330d",
    "metadata": {},
    "outputs": [
@@ -248,32 +275,45 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"using_dataset\"\n",
+      "Model: \"multi_input\"\n",
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
-      "inputs (InputLayer)          [(None, 168)]             0         \n",
+      "inputs (InputLayer)          [(None, 168, 14)]         0         \n",
       "_________________________________________________________________\n",
-      "dense_0 (Dense)              (None, 64)                10816     \n",
+      "reshape (Reshape)            (None, 168, 14, 1)        0         \n",
+      "_________________________________________________________________\n",
+      "conv_0 (Conv2D)              (None, 83, 14, 8)         32        \n",
+      "_________________________________________________________________\n",
+      "pool_0 (MaxPooling2D)        (None, 41, 14, 8)         0         \n",
+      "_________________________________________________________________\n",
+      "conv_1 (Conv2D)              (None, 20, 14, 16)        400       \n",
+      "_________________________________________________________________\n",
+      "pool_1 (MaxPooling2D)        (None, 10, 14, 16)        0         \n",
+      "_________________________________________________________________\n",
+      "flatten (Flatten)            (None, 2240)              0         \n",
+      "_________________________________________________________________\n",
+      "dense_0 (Dense)              (None, 64)                143424    \n",
       "_________________________________________________________________\n",
       "dense_1 (Dense)              (None, 32)                2080      \n",
       "_________________________________________________________________\n",
       "outputs (Dense)              (None, 3)                 99        \n",
       "=================================================================\n",
-      "Total params: 12,995\n",
-      "Trainable params: 12,995\n",
+      "Total params: 146,035\n",
+      "Trainable params: 146,035\n",
       "Non-trainable params: 0\n",
       "_________________________________________________________________\n"
      ]
     }
    ],
    "source": [
-    "model = set_model(CONFIGS, print_summary=True)"
+    "model = set_model(CONFIGS, print_summary=True)\n",
+    "# model = set_model(CONFIGS, 'bilstm', print_summary=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "id": "a89ab345",
    "metadata": {},
    "outputs": [],
@@ -306,48 +346,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "id": "456b660b",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Epoch 1/100\n",
-      "29/29 [==============================] - 1s 6ms/step - loss: 53111208.0000 - val_loss: 30510230.0000\n",
+      "29/29 [==============================] - 2s 9ms/step - loss: 7818196287488.0000 - val_loss: 743945797632.0000\n",
       "Epoch 2/100\n",
-      "29/29 [==============================] - 0s 2ms/step - loss: 20358592.0000 - val_loss: 10402436.0000\n",
+      "29/29 [==============================] - 0s 3ms/step - loss: 340416004096.0000 - val_loss: 1158880256.0000\n",
       "Epoch 3/100\n",
-      "29/29 [==============================] - 0s 2ms/step - loss: 6040045.0000 - val_loss: 1896179.1250\n",
+      "29/29 [==============================] - 0s 4ms/step - loss: 15383173120.0000 - val_loss: 2532577792.0000\n",
       "Epoch 4/100\n",
-      "29/29 [==============================] - 0s 2ms/step - loss: 719989.3125 - val_loss: 18211.7754\n",
+      "29/29 [==============================] - 0s 3ms/step - loss: 949856576.0000 - val_loss: 22795988.0000\n",
       "Epoch 5/100\n",
-      "29/29 [==============================] - 0s 2ms/step - loss: 14112.1777 - val_loss: 27216.6816\n",
+      "29/29 [==============================] - 0s 3ms/step - loss: 40000508.0000 - val_loss: 1314307.6250\n",
       "Epoch 6/100\n",
-      "29/29 [==============================] - 0s 2ms/step - loss: 9303.0381 - val_loss: 15117.3232\n",
+      "29/29 [==============================] - 0s 3ms/step - loss: 2010272.0000 - val_loss: 277754.5000\n",
       "Epoch 7/100\n",
-      "29/29 [==============================] - 0s 2ms/step - loss: 7662.9302 - val_loss: 13330.0322\n",
+      "29/29 [==============================] - 0s 3ms/step - loss: 123320.3125 - val_loss: 23086.6465\n",
       "Epoch 8/100\n",
-      "29/29 [==============================] - 0s 2ms/step - loss: 7459.7109 - val_loss: 14102.7021\n",
+      "29/29 [==============================] - 0s 3ms/step - loss: 11847.4141 - val_loss: 7186.3330\n",
       "Epoch 9/100\n",
-      "29/29 [==============================] - 0s 2ms/step - loss: 7374.8794 - val_loss: 14117.9922\n",
+      "29/29 [==============================] - 0s 3ms/step - loss: 8486.5518 - val_loss: 9093.6777\n",
       "Epoch 10/100\n",
-      "29/29 [==============================] - 0s 2ms/step - loss: 7295.9316 - val_loss: 14247.2041\n",
+      "29/29 [==============================] - 0s 3ms/step - loss: 8793.6553 - val_loss: 8358.9316\n",
       "Epoch 11/100\n",
-      "29/29 [==============================] - 0s 2ms/step - loss: 7244.8994 - val_loss: 14354.1943\n",
+      "29/29 [==============================] - 0s 3ms/step - loss: 10617.4492 - val_loss: 8992.8223\n",
       "Epoch 12/100\n",
-      "29/29 [==============================] - 0s 2ms/step - loss: 7208.0059 - val_loss: 14450.8516\n",
+      "29/29 [==============================] - 0s 3ms/step - loss: 16676.8457 - val_loss: 7171.8682\n",
       "Epoch 13/100\n",
-      "29/29 [==============================] - 0s 2ms/step - loss: 7181.9995 - val_loss: 14516.5498\n",
+      "29/29 [==============================] - 0s 3ms/step - loss: 11302.2725 - val_loss: 7422.3062\n",
       "Epoch 14/100\n",
-      "29/29 [==============================] - 0s 2ms/step - loss: 7158.6899 - val_loss: 14582.9268\n",
+      "29/29 [==============================] - 0s 3ms/step - loss: 9704.5869 - val_loss: 5577.3955\n",
       "Epoch 15/100\n",
-      "29/29 [==============================] - 0s 2ms/step - loss: 7138.8018 - val_loss: 14676.1064\n",
+      "29/29 [==============================] - 0s 3ms/step - loss: 8889.3418 - val_loss: 7200.7964\n",
       "Epoch 16/100\n",
-      "29/29 [==============================] - 0s 2ms/step - loss: 7126.3467 - val_loss: 14734.3887\n",
+      "29/29 [==============================] - 0s 3ms/step - loss: 12347.5918 - val_loss: 47325.1680\n",
       "Epoch 17/100\n",
-      "29/29 [==============================] - 0s 2ms/step - loss: 7114.9067 - val_loss: 14805.4893\n"
+      "29/29 [==============================] - 0s 3ms/step - loss: 13785.1221 - val_loss: 8425.7383\n",
+      "Epoch 18/100\n",
+      "29/29 [==============================] - 0s 3ms/step - loss: 9031.5850 - val_loss: 34659.2852\n",
+      "Epoch 19/100\n",
+      "29/29 [==============================] - 0s 3ms/step - loss: 13051.1699 - val_loss: 40702.2617\n",
+      "Epoch 20/100\n",
+      "29/29 [==============================] - 0s 3ms/step - loss: 16735.7129 - val_loss: 5812.4482\n",
+      "Epoch 21/100\n",
+      "29/29 [==============================] - 0s 3ms/step - loss: 10326.7324 - val_loss: 12153.6396\n",
+      "Epoch 22/100\n",
+      "29/29 [==============================] - 0s 3ms/step - loss: 10842.3428 - val_loss: 7755.9858\n",
+      "Epoch 23/100\n",
+      "29/29 [==============================] - 0s 3ms/step - loss: 8774.5947 - val_loss: 9310.4814\n",
+      "Epoch 24/100\n",
+      "29/29 [==============================] - 0s 3ms/step - loss: 9099.2832 - val_loss: 18518.5254\n"
      ]
     }
    ],
@@ -357,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "id": "e3affb87",
    "metadata": {},
    "outputs": [],
@@ -368,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "id": "d0d41640",
    "metadata": {},
    "outputs": [],
@@ -380,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "id": "96ae1a3f",
    "metadata": {},
    "outputs": [
@@ -388,9 +444,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "train_loss: 7508.27001953125\n",
-      "valid_loss: 13330.0322265625\n",
-      "test_loss: 13318.1591796875\n"
+      "train_loss: 9082.861328125\n",
+      "valid_loss: 5577.3955078125\n",
+      "test_loss: 13567.5966796875\n"
      ]
     }
    ],
