--- a/codes/1_super_basic.ipynb
+++ b/codes/1_super_basic.ipynb
@@ -26,19 +26,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 총 2040개의 데이터\n",
-    "# 0:1992 -> train\n",
-    "# 1992:2016 -> valid\n",
-    "# 2016:2040 -> test\n",
-    "\n",
     "CONFIGS = {\n",
     "    'data_path': '../data/',\n",
     "    'model_path': '../model/',\n",
     "    'model_name': 'super_basic',\n",
-    "    \n",
-    "    'test_lenght': 24,\n",
-    "    'valid_start_index': 1992,\n",
-    "    'test_start_index': 2016,\n",
+    "\n",
+    "    'valid_start_index': 1704,\n",
+    "    'test_start_index': 1872,\n",
     "    \n",
     "    'batch_size': 64,\n",
     "    'learning_rate': 1e-4,\n",
@@ -72,7 +66,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "data.shape: (2040, 1)\n"
+      "data.shape: (2040, 2)\n"
      ]
     }
    ],
@@ -84,7 +78,7 @@
     "    'humid', 'rain', 'sun', 'non_elec_eq', 'sunlight_eq'\n",
     "]\n",
     "\n",
-    "data = data.loc[data['num'] == 1, ['target']]\n",
+    "data = data.loc[data['num'] == 1, ['date_time', 'target']]\n",
     "\n",
     "print(f'data.shape: {data.shape}')"
    ]
@@ -138,12 +132,10 @@
     "    \n",
     "    train = data[:CONFIGS['valid_start_index']]\n",
     "    valid = data[\n",
-    "        CONFIGS['valid_start_index']-CONFIGS['window_size']:\\\n",
-    "        CONFIGS['valid_start_index']+CONFIGS['test_lenght']\n",
+    "        CONFIGS['valid_start_index']-CONFIGS['window_size']:CONFIGS['test_start_index']\n",
     "    ]\n",
     "    test = data[\n",
-    "        CONFIGS['test_start_index']-CONFIGS['window_size']:\\\n",
-    "        CONFIGS['test_start_index']+CONFIGS['test_lenght']\n",
+    "        CONFIGS['test_start_index']-CONFIGS['window_size']:\n",
     "    ]\n",
     "    \n",
     "    train, valid, test = \\\n",
@@ -279,51 +271,33 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/100\n",
-      "29/29 [==============================] - 1s 5ms/step - loss: 29171228.0000 - val_loss: 2767708.2500\n",
+      "24/24 [==============================] - 1s 5ms/step - loss: 15897014.0000 - val_loss: 364418.5938\n",
       "Epoch 2/100\n",
-      "29/29 [==============================] - 0s 2ms/step - loss: 529744.9375 - val_loss: 99979.0703\n",
+      "24/24 [==============================] - 0s 2ms/step - loss: 289292.2500 - val_loss: 204616.7656\n",
       "Epoch 3/100\n",
-      "29/29 [==============================] - 0s 2ms/step - loss: 44502.1953 - val_loss: 21834.5625\n",
+      "24/24 [==============================] - 0s 2ms/step - loss: 52392.6562 - val_loss: 36246.0195\n",
       "Epoch 4/100\n",
-      "29/29 [==============================] - 0s 2ms/step - loss: 10805.7334 - val_loss: 20649.0137\n",
+      "24/24 [==============================] - 0s 2ms/step - loss: 13383.1748 - val_loss: 9559.9424\n",
       "Epoch 5/100\n",
-      "29/29 [==============================] - 0s 2ms/step - loss: 10354.5117 - val_loss: 20345.8496\n",
+      "24/24 [==============================] - 0s 2ms/step - loss: 8216.7217 - val_loss: 10786.6777\n",
       "Epoch 6/100\n",
-      "29/29 [==============================] - 0s 2ms/step - loss: 10248.9678 - val_loss: 21853.8438\n",
+      "24/24 [==============================] - 0s 2ms/step - loss: 7815.0430 - val_loss: 10405.8604\n",
       "Epoch 7/100\n",
-      "29/29 [==============================] - 0s 2ms/step - loss: 10241.2285 - val_loss: 22073.1680\n",
+      "24/24 [==============================] - 0s 2ms/step - loss: 7765.8848 - val_loss: 10357.1709\n",
       "Epoch 8/100\n",
-      "29/29 [==============================] - 0s 2ms/step - loss: 10230.7256 - val_loss: 21134.9453\n",
+      "24/24 [==============================] - 0s 2ms/step - loss: 7751.0742 - val_loss: 10478.9570\n",
       "Epoch 9/100\n",
-      "29/29 [==============================] - 0s 2ms/step - loss: 10218.5537 - val_loss: 20939.6914\n",
+      "24/24 [==============================] - 0s 2ms/step - loss: 7785.0522 - val_loss: 10507.6641\n",
       "Epoch 10/100\n",
-      "29/29 [==============================] - 0s 2ms/step - loss: 10228.7090 - val_loss: 19790.1543\n",
+      "24/24 [==============================] - 0s 2ms/step - loss: 7786.5996 - val_loss: 10368.0156\n",
       "Epoch 11/100\n",
-      "29/29 [==============================] - 0s 2ms/step - loss: 10223.0098 - val_loss: 21153.4766\n",
+      "24/24 [==============================] - 0s 2ms/step - loss: 7771.2705 - val_loss: 10177.0439\n",
       "Epoch 12/100\n",
-      "29/29 [==============================] - 0s 2ms/step - loss: 10214.4053 - val_loss: 18075.7363\n",
+      "24/24 [==============================] - 0s 2ms/step - loss: 7753.8652 - val_loss: 10380.8242\n",
       "Epoch 13/100\n",
-      "29/29 [==============================] - 0s 2ms/step - loss: 10290.8223 - val_loss: 17620.7832\n",
+      "24/24 [==============================] - 0s 2ms/step - loss: 7755.0625 - val_loss: 10349.1768\n",
       "Epoch 14/100\n",
-      "29/29 [==============================] - 0s 2ms/step - loss: 10234.0977 - val_loss: 19084.3828\n",
-      "Epoch 15/100\n",
-      "29/29 [==============================] - 0s 2ms/step - loss: 10229.2598 - val_loss: 21611.3438\n",
-      "Epoch 16/100\n",
-      "29/29 [==============================] - 0s 2ms/step - loss: 10208.3818 - val_loss: 22781.2500\n",
-      "Epoch 17/100\n",
-      "29/29 [==============================] - 0s 2ms/step - loss: 10217.0498 - val_loss: 21764.4785\n",
-      "Epoch 18/100\n",
-      "29/29 [==============================] - 0s 2ms/step - loss: 10208.7510 - val_loss: 23027.1270\n",
-      "Epoch 19/100\n",
-      "29/29 [==============================] - 0s 2ms/step - loss: 10224.2930 - val_loss: 21797.2617\n",
-      "Epoch 20/100\n",
-      "29/29 [==============================] - 0s 2ms/step - loss: 10264.1152 - val_loss: 19810.0078\n",
-      "Epoch 21/100\n",
-      "29/29 [==============================] - 0s 2ms/step - loss: 10199.9482 - val_loss: 20021.9043\n",
-      "Epoch 22/100\n",
-      "29/29 [==============================] - 0s 2ms/step - loss: 10202.5488 - val_loss: 20071.9180\n",
-      "Epoch 23/100\n",
-      "29/29 [==============================] - 0s 2ms/step - loss: 10180.3438 - val_loss: 19211.3301\n"
+      "24/24 [==============================] - 0s 2ms/step - loss: 7756.6533 - val_loss: 10311.2588\n"
      ]
     }
    ],
@@ -368,9 +342,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "train_loss: 10422.763671875\n",
-      "valid_loss: 17620.783203125\n",
-      "test_loss: 21256.591796875\n"
+      "train_loss: 8580.9912109375\n",
+      "valid_loss: 9559.943359375\n",
+      "test_loss: 11584.376953125\n"
      ]
     }
    ],
